appId: com.anonymous.mobile
---
- stopApp
- launchApp

# Intro Screen
- tapOn: "診断スタート！"

# Profile Screen
- tapOn: "例: たろう"
- inputText: "MaestroUser"
- hideKeyboard

- tapOn: "男性"
- tapOn: "未婚"

- tapOn: "診断する！"

# Result Screen
- assertVisible: "鑑定結果"
- assertVisible: "MaestroUser"
